implemented SonarQube, removed bugs, vulnerabilities, code smells, refactored and fixed Validation handling issue